# deep-coder-agent

./: .gitignore  README.md  architecture.md  demo_server.py  god_mode_agent_architecture.md.resolved  model_switching_guide.md.resolved  plan_test.txt  pyproject.toml  run_drift_simulation.py  run_simulation.py  sim_output.txt  task.md.resolved  test_demo.py  train_resnet50.py  verify_god_mode.py  walkthrough.md  walkthrough.md.resolved
.agent/: architecture.md
.agent_log/: run_20260216_040827.json  run_20260216_040945.json  run_20260216_063231.json  run_20260216_063304.json
agent/: __init__.py  __main__.py  cli.py  config.py  server.py  state.py  web_ui.py
external_model_server/: onnx_server.py  requirements.txt
logs/: decision_log_drift_sim_1771068328.jsonl  decision_log_self_test_1771083432.jsonl  decision_log_self_test_1771088211.jsonl  decision_log_self_test_1771088249.jsonl  decision_log_self_test_1771088279.jsonl  decision_log_self_test_1771088466.jsonl  decision_log_self_test_1771088824.jsonl  decision_log_self_test_1771089106.jsonl  decision_log_self_test_1771089409.jsonl  decision_log_self_test_1771089836.jsonl  decision_log_self_test_1771090405.jsonl  decision_log_self_test_1771090976.jsonl  decision_log_self_test_1771091348.jsonl  decision_log_self_test_1771091541.jsonl  decision_log_self_test_1771091920.jsonl  decision_log_self_test_1771092652.jsonl  decision_log_self_test_1771092710.jsonl  decision_log_self_test_1771092953.jsonl  decision_log_self_test_1771098728.jsonl  decision_log_self_test_1771099612.jsonl  decision_log_self_test_1771100633.jsonl  (+60 more)
(+93 files in other folders)
